feat(api): Added profile endpoint

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "puppeteer-apis",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Eduardo P. Rivero <jrperedo@gmail.com> (https://blog.eperedo.com/)",
-  "license": "MIT",
-  "dependencies": {
-    "chrome-aws-lambda": "1.11.2",
-    "hapi": "18.1.0",
-    "puppeteer-core": "1.12.2"
-  }
+	"name": "puppeteer-apis",
+	"version": "1.0.0",
+	"description": "The unofficial platzi api",
+	"scripts": {
+		"start": "CHROME_PATH='/Applications/Google Chrome.app/Contents/MacOS/Google Chrome' node src/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"platzi",
+		"api"
+	],
+	"author": "Eduardo P. Rivero <jrperedo@gmail.com> (https://blog.eperedo.com/)",
+	"license": "MIT",
+	"dependencies": {
+		"chrome-aws-lambda": "1.11.2",
+		"hapi": "18.1.0",
+		"puppeteer-core": "1.12.2"
+	}
 }
