--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "The unofficial platzi api",
 	"scripts": {
 		"start": "node src/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest"
 	},
 	"keywords": [
 		"platzi",
@@ -16,5 +16,9 @@
 		"chrome-aws-lambda": "1.11.2",
 		"hapi": "18.1.0",
 		"puppeteer-core": "1.12.2"
+	},
+	"devDependencies": {
+		"dotenv": "6.2.0",
+		"jest": "24.1.0"
 	}
 }
