--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"chrome-aws-lambda": "1.11.2",
 		"hapi": "18.1.0",
+		"joi": "14.3.1",
 		"puppeteer-core": "1.12.2"
 	},
 	"devDependencies": {
